# obj2

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md
examples/01 single doc and user/android/: settings.gradle
examples/01 single doc and user/android/gradle/wrapper/: gradle-wrapper.properties
examples/01 single doc and user/model/: model.cpp
examples/01 single doc and user/msvc/: AetherDoc.cpp
examples/01 single doc and user/xcode/AetherDoc.xcworkspace/: contents.xcworkspacedata
examples/01 single doc and user/xcode/AetherDocMac/AetherDocMac/: AppDelegate.mm  MainWindow.h  main.m
examples/01 single doc and user/xcode/AetherDocMac/AetherDocMac.xcodeproj/: project.pbxproj
examples/01 single doc and user/xcode/AetherDociOS/AetherDociOS/: AppDelegate.mm  SceneDelegate.m
examples/02 2 separated apps simulation/android/app/: build.gradle
examples/02 2 separated apps simulation/model/: model.cpp  model.h
examples/02 2 separated apps simulation/msvc/: AetherDoc.cpp  AetherDoc.sln
examples/aether_doc/android/app/: build.gradle
examples/aether_doc/model/: model.cpp  model.h
examples/aether_doc/msvc/: AetherDoc.cpp  AetherDoc.vcxproj
test/: CMakeLists.txt  config.h  test.sh
test/obj_develop/obj_develop/: 00_ptr.cpp  01_domain.cpp  02_serialize_references.cpp  03_event_processor.cpp  04_devmode.cpp  05_versioning.cpp  06_factory.cpp  07_app.cpp  08_graph.cpp  09_weak.cpp  main.cpp
test/obj_develop/obj_develop.xcodeproj/: project.pbxproj
test/obj_develop/obj_develop.xcodeproj/xcshareddata/xcschemes/: obj_develop.xcscheme
(+44 files in other folders)
